--- a/examples/hippy-vue-next-demo/package.json
+++ b/examples/hippy-vue-next-demo/package.json
@@ -16,11 +16,10 @@
     "hippy:vendor": "node ./scripts/env-polyfill.js webpack --config ./scripts/hippy-webpack.ios-vendor.js --config ./scripts/hippy-webpack.android-vendor.js",
     "hippy:build": "node ./scripts/env-polyfill.js webpack --config ./scripts/hippy-webpack.ios.js --config ./scripts/hippy-webpack.android.js",
     "web:dev": "npm run hippy:dev & node ./scripts/env-polyfill.js webpack serve --config ./scripts/hippy-webpack.web-renderer.dev.js",
-    "ssr:dev-build": "node ./scripts/webpack.ssr.build.js --mode development",
-    "ssr:dev-server": "cross-env HIPPY_SSR=true node --inspect=0.0.0.0:8081 ./dist/server/index.js --mode development",
-    "hippy:debug": "hippy-debug",
-    "ssr:prod-build": "node ./scripts/webpack.ssr.build.js --mode production",
-    "ssr:prod-server": "cross-env HIPPY_SSR=true node ./dist/server/index.js --mode production"
+    "ssr:dev-client": "node ./scripts/env-polyfill.js hippy-dev -c ./scripts/webpack-ssr-config/client.dev.js",
+    "ssr:dev-server": "node ./scripts/env-polyfill.js && node ./scripts/webpack.ssr.dev.js",
+    "ssr:prod-build": "node ./scripts/webpack.ssr.build.js",
+    "ssr:prod-server": "node ./dist/server/index.js --mode production"
   },
   "dependencies": {
     "@hippy/vue-router-next-history": "latest",
