--- a/examples/hippy-vue-next-demo/package.json
+++ b/examples/hippy-vue-next-demo/package.json
@@ -30,6 +30,7 @@
     "@hippy/vue-next-style-parser": "file:../../packages/hippy-vue-next-style-parser",
     "@vue/runtime-core": "^3.2.46",
     "@vue/shared": "^3.2.46",
+    "core-js": "^3.20.2",
     "vue": "^3.2.46",
     "vue-router": "^4.0.12",
     "express": "^4.18.2",
@@ -77,5 +78,8 @@
     "vue-loader": "^17.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.7.2"
+  },
+  "engines": {
+    "node": ">=15"
   }
 }
