feat(vue-next): ssr support commit for library & demo

--- a/driver/js/examples/hippy-vue-next-ssr-demo/package.json
+++ b/driver/js/examples/hippy-vue-next-ssr-demo/package.json
@@ -1,13 +1,13 @@
 {
   "name": "hippy-vue-next-demo",
-  "version": "2.0.0",
-  "description": "A Demo Example For Hippy-Vue-Next Library To Show.",
+  "version": "3.0.0",
+  "description": "A SSR Demo Example For Hippy-Vue-Next Library To Show.",
   "private": true,
   "webMain": "./src/main-web.ts",
   "nativeMain": "./src/main-native.ts",
   "serverMain": "./src/main-server.ts",
   "serverEntry": "./server.ts",
-  "ssrMain": "./src/main-client.ts",
+  "ssrMain": "./src/main.ts",
   "repository": "https://github.com/Tencent/Hippy/tree/master/examples/hippy-vue-next-demo",
   "license": "Apache-2.0",
   "author": "OpenHippy Team",
