--- a/renderer/voltron/pubspec.yaml
+++ b/renderer/voltron/pubspec.yaml
@@ -23,7 +23,7 @@
 
 name: voltron_renderer
 description: voltron renderer
-version: 0.0.26
+version: 0.0.27
 homepage: https://hippyjs.org
 repository: https://github.com/Tencent/Hippy
 
@@ -47,6 +47,7 @@ dependencies:
   charset: ^1.1.0
   ffi: ^2.0.0
   voltron_ffi: 0.0.6
+  voltron_screen_info: 0.0.1
 
 dev_dependencies:
   flutter_test:
