feat(ios): Improve method of getting UI state and Add NightMode
sync from hippy2

--- a/framework/examples/ios-demo/podfile
+++ b/framework/examples/ios-demo/podfile
@@ -1,4 +1,4 @@
-ENV["layout_engine"]="Taitank"
+# ENV["layout_engine"]="Taitank"
 # ENV["js_engine"] = "v8"
 install! 'cocoapods',
          :deterministic_uuids => false,
