--- a/framework/examples/ios-demo/podfile
+++ b/framework/examples/ios-demo/podfile
@@ -8,7 +8,9 @@ install! 'cocoapods',
 workspace 'HippyDemo.xcworkspace'
 
 target "HippyDemo" do
-    project './HippyDemo.xcodeproj'
-    pod 'hippy', :path => '../../..'
+  platform :ios, '11.0'
+  
+  pod 'hippy', :path => '../../..'
+  
 end
 
