--- a/framework/examples/ios-demo/podfile
+++ b/framework/examples/ios-demo/podfile
@@ -1,9 +1,12 @@
-# ENV["layout_engine"]="Taitank"
-# ENV["js_engine"] = "v8"
+#ENV["layout_engine"]="Taitank"
+#ENV["js_engine"] = "v8"
 
 install! 'cocoapods',
          :deterministic_uuids => false,
          :generate_multiple_pod_projects => true
+
+#use_frameworks! :linkage => :static  # 静态库framework格式
+#ENV["use_frameworks"] = "true" # for hippy when set use_frameworks!
 
 workspace 'HippyDemo.xcworkspace'
 
