--- a/framework/android/connector/driver/js/gradle.properties
+++ b/framework/android/connector/driver/js/gradle.properties
@@ -20,7 +20,7 @@
 # Indicates the javascript engine to use:
 #   * V8
 #
-CPP_JS_ENGINE=V8
+CPP_JS_ENGINE=HERMES
 
 #
 # V8 Component
@@ -42,4 +42,4 @@ CPP_V8_COMPONENT=10.6.194
 # When you want to debug your app, set it true, devtools inspector show
 # elements tab, UI insector etc to improve your app.
 #
-CPP_ENABLE_INSPECTOR=true
+CPP_ENABLE_INSPECTOR=false
