--- a/framework/android/gradle.properties
+++ b/framework/android/gradle.properties
@@ -88,7 +88,7 @@ CPP_HIDDEN_LIBRARY_SYMBOL=true
 #
 CPP_ANDROID_STL=c++_static
 CPP_ANDROID_PLATFORM=android-21
-CPP_ANDROID_CPP_FEATURES=no-rtti no-exceptions
+CPP_ANDROID_CPP_FEATURES=no-exceptions
 CPP_ANDROID_ARM_NEON=true
 
 #
