--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -41,7 +41,7 @@ CMakeLists.txt @ilikethese @etkmao
 /framework/ios/ @wwwcg @ruifanyuan
 
 # framework: voltron
-/framework/voltron/ @lvfen @skindhu
+/framework/voltron/ @lvfen @henryjin0511
 
 # dom: others
 /dom/ @etkmao @ilikethese
@@ -57,17 +57,17 @@ CMakeLists.txt @ilikethese @etkmao
 /renderer/tdf/ios/ @wwwcg @ruifanyuan
 
 # renderer: voltron
-/renderer/voltron/ @lvfen @skindhu
+/renderer/voltron/ @lvfen @henryjin0511
 
 # module: vfs
 /modules/vfs/ @etkmao @ilikethese
 /modules/vfs/android/ @siguangli @iPel
 /modules/vfs/android/**/src/main/cpp/ @etkmao @ilikethese
 /modules/vfs/ios/ @wwwcg @ruifanyuan
-/modules/vfs/voltron/ @lvfen @skindhu
+/modules/vfs/voltron/ @lvfen @henryjin0511
 
 # module: voltron
-/modules/voltron/ @lvfen @skindhu
+/modules/voltron/ @lvfen @henryjin0511
 
 # module: android
 /modules/android/ @siguangli @iPel
