--- a/hermes/CMakeLists.txt
+++ b/hermes/CMakeLists.txt
@@ -25,11 +25,28 @@ add_library(${PROJECT_NAME} INTERFACE)
 target_include_directories(${PROJECT_NAME} INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 #import jsi
-add_library(jsi_library STATIC IMPORTED)
-set_property(TARGET jsi_library PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/arm64-v8a/libjsi.a")
+add_library(jsi_library SHARED IMPORTED)
+if(CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
+  set_property(TARGET jsi_library PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/arm64-v8a/libjsi.so")
+elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "armv7")
+  set_property(TARGET jsi_library PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/armeabi-v7a/libjsi.so")
+endif()
 target_link_libraries(${PROJECT_NAME} INTERFACE jsi_library)
+
+#import fbjni
+add_library(fbjni_library SHARED IMPORTED)
+if(CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
+  set_property(TARGET fbjni_library PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/arm64-v8a/libfbjni.so")
+elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "armv7")
+  set_property(TARGET fbjni_library PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/armeabi-v7a/libfbjni.so")
+endif()
+target_link_libraries(${PROJECT_NAME} INTERFACE fbjni_library)
 
 #import hermes
 add_library(hermes_library SHARED IMPORTED)
-set_property(TARGET hermes_library PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/arm64-v8a/libhermes.so")
+if(CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
+  set_property(TARGET hermes_library PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/arm64-v8a/libhermes.so")
+elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "armv7")
+  set_property(TARGET hermes_library PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/armeabi-v7a/libhermes.so")
+endif()
 target_link_libraries(${PROJECT_NAME} INTERFACE hermes_library)
