--- a/framework/android/build.gradle
+++ b/framework/android/build.gradle
@@ -66,6 +66,7 @@ android {
         consumerProguardFiles 'proguard-rules.pro'
 
         buildConfigField("boolean", "ENABLE_SO_LOAD_EXTERNAL", ENABLE_SO_LOAD_EXTERNAL)
+        buildConfigField("boolean", "ENABLE_BUGLY_REPORT", ENABLE_BUGLY_REPORT)
         buildConfigField("String", "LIBRARY_VERSION", "String.valueOf(\"$VERSION_NAME\")")
 
         packagingOptions {
