--- a/framework/android/gradle.properties
+++ b/framework/android/gradle.properties
@@ -103,6 +103,8 @@ EXCLUDE_LIBRARY_FILES=
 #features
 ENABLE_SO_LOAD_EXTERNAL=false
 
+ENABLE_BUGLY_REPORT=false
+
 #
 # Specifies maven publish artifact ID
 #
