--- a/.github/workflows/ios_build_tests_bypass.yml
+++ b/.github/workflows/ios_build_tests_bypass.yml
@@ -29,7 +29,7 @@ concurrency:
 
 jobs:
   ios_build_tests:
-    runs-on: ubuntu-latest # use ubuntu to replace macos in order to save macos resources and improve efficiency
+    runs-on: ubuntu-latest # use ubuntu to replace MacOS in order to save MacOS resources and improve efficiency
     strategy:
       matrix:
         type: [Debug, Release]
