--- a/driver/js/packages/hippy-vue-next-compiler-ssr/package.json
+++ b/driver/js/packages/hippy-vue-next-compiler-ssr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/vue-next-compiler-ssr",
-  "version": "unspecified",
+  "version": "3.2.0",
   "description": "Vue-Next server render compiler for Hippy native framework",
   "author": "OpenHippy Team",
   "homepage": "https://hippyjs.org",
