--- a/driver/js/packages/hippy-react-web/package.json
+++ b/driver/js/packages/hippy-react-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/react-web",
-  "version": "3.2.0",
+  "version": "3.2.0-beta",
   "description": "Web Adapter for Hippy React",
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
