--- a/driver/js/packages/hippy-vue-loader/package.json
+++ b/driver/js/packages/hippy-vue-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/vue-loader",
-  "version": "3.2.0",
+  "version": "3.2.0-beta",
   "description": "Vue single-file component loader for Webpack",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
