--- a/driver/js/packages/hippy-vue-native-components/package.json
+++ b/driver/js/packages/hippy-vue-native-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/vue-native-components",
-  "version": "3.2.0",
+  "version": "3.2.0-beta",
   "description": "Native components middleware for Hippy-Vue, the components only for native, can't compatible with web.",
   "main": "dist/index.js",
   "homepage": "https://hippyjs.org",
