--- a/driver/js/packages/hippy-vue-next-server-renderer/package.json
+++ b/driver/js/packages/hippy-vue-next-server-renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/vue-next-server-renderer",
-  "version": "3.2.0",
+  "version": "3.2.0-beta",
   "description": "Vue-Next server renderer for Hippy native framework",
   "author": "OpenHippy Team",
   "homepage": "https://hippyjs.org",
