--- a/driver/js/packages/hippy-vue-next-style-parser/package.json
+++ b/driver/js/packages/hippy-vue-next-style-parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/hippy-vue-next-style-parser",
-  "version": "3.2.0",
+  "version": "3.2.0-beta",
   "description": "A css subset parser for hippy-vue-next",
   "author": "OpenHippy Team",
   "homepage": "https://hippyjs.org",
