--- a/driver/js/packages/hippy-vue/package.json
+++ b/driver/js/packages/hippy-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/vue",
-  "version": "3.2.0",
+  "version": "3.2.0-beta",
   "description": "Vue binding for Hippy native framework",
   "author": "OpenHippy Team",
   "license": "Apache-2.0",
