--- a/driver/js/examples/hippy-vue-next-demo/package.json
+++ b/driver/js/examples/hippy-vue-next-demo/package.json
@@ -19,8 +19,9 @@
     "@hippy/vue-next": "latest",
     "@hippy/vue-router-next-history": "latest",
     "@hippy/web-renderer": "latest",
-    "@vue/runtime-core": "^3.2.21",
-    "vue": "^3.2.21",
+    "@vue/runtime-core": "^3.2.46",
+    "@vue/shared": "^3.2.46",
+    "vue": "^3.2.46",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
@@ -42,7 +43,7 @@
     "@hippy/vue-css-loader": "^2.0.1",
     "@vitejs/plugin-vue": "^1.9.4",
     "@vue/cli-service": "^4.5.19",
-    "@vue/compiler-sfc": "^3.2.21",
+    "@vue/compiler-sfc": "^3.2.46",
     "babel-loader": "^8.1.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^4.0.0",
@@ -58,6 +59,7 @@
     "url-loader": "^4.0.0",
     "vue-loader": "^17.0.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
