--- a/driver/js/packages/hippy-vue-next/package.json
+++ b/driver/js/packages/hippy-vue-next/package.json
@@ -28,13 +28,12 @@
     "README.md"
   ],
   "peerDependencies": {
-    "@vue/runtime-core": "^3.2.46"
-  },
-  "dependencies": {
+    "@vue/runtime-core": "^3.2.46",
     "@vue/shared": "^3.2.46"
   },
   "devDependencies": {
-    "@vue/runtime-core": "^3.2.46"
+    "@vue/runtime-core": "^3.2.46",
+    "@vue/shared": "^3.2.46"
   },
   "jest": {
     "moduleNameMapper": {
