fix(vue-next): fix vue-next package dependencies issue
* fix(vue-next): fix vue package dependencies issue

* fix(vue-next): fix vue-next package dependencies issue

--- a/driver/js/packages/hippy-vue-next/package.json
+++ b/driver/js/packages/hippy-vue-next/package.json
@@ -27,7 +27,11 @@
     "dist/index.d.ts",
     "README.md"
   ],
-  "dependencies": {
+  "peerDependencies": {
+    "@vue/runtime-core": "^3.2.46",
+    "@vue/shared": "^3.2.46"
+  },
+  "devDependencies": {
     "@vue/runtime-core": "^3.2.46",
     "@vue/shared": "^3.2.46"
   },
