--- a/driver/js/packages/hippy-vue-next-server-renderer/package.json
+++ b/driver/js/packages/hippy-vue-next-server-renderer/package.json
@@ -25,12 +25,15 @@
     "dist/index.d.ts",
     "README.md"
   ],
-  "dependencies": {
+  "peerDependencies": {
     "@vue/server-renderer": "^3.2.46",
     "@vue/runtime-core": "^3.2.46",
     "@vue/shared": "^3.2.46"
   },
   "devDependencies": {
+    "@vue/server-renderer": "^3.2.46",
+    "@vue/runtime-core": "^3.2.46",
+    "@vue/shared": "^3.2.46",
     "vue": "^3.2.46"
   },
   "jest": {
