build(ios): fix workflow build script

--- a/.github/workflows/ios_build_tests.yml
+++ b/.github/workflows/ios_build_tests.yml
@@ -41,4 +41,5 @@ jobs:
       - name: Demo
         working-directory: framework/examples/ios-demo
         run: |
+          pod install
           xcodebuild build -destination "generic/platform=iOS" -workspace "HippyDemo.xcworkspace" -scheme "HippyDemo" -configuration ${{matrix.type}} CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO 
