--- a/framework/android/gradle.properties
+++ b/framework/android/gradle.properties
@@ -43,7 +43,7 @@ NDK_VERSION=25.0.8775105
 #
 # Specifies SDK version
 #
-VERSION_NAME=unspecified
+VERSION_NAME=3.3.0
 
 #
 # Whether to skip build C/C++ code
@@ -62,7 +62,7 @@ SKIP_CMAKE_AND_NINJA=false
 # and the artifacts will be copied to the armeabi directory.
 #
 INCLUDE_ABI_ARMEABI=false
-INCLUDE_ABI_ARMEABI_V7A=false
+INCLUDE_ABI_ARMEABI_V7A=true
 INCLUDE_ABI_ARM64_V8A=true
 INCLUDE_ABI_X86=false
 INCLUDE_ABI_X86_64=false
