--- a/driver/js/examples/hippy-react-demo/package.json
+++ b/driver/js/examples/hippy-react-demo/package.json
@@ -48,11 +48,16 @@
     "@babel/polyfill": "^7.12.0",
     "@babel/preset-env": "^7.12.0",
     "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.24.7",
     "@hippy/debug-server-next": "latest",
     "@hippy/hippy-dynamic-import-plugin": "^2.0.0",
     "@hippy/hippy-hmr-plugin": "^0.1.0",
     "@hippy/hippy-react-refresh-webpack-plugin": "^0.5.5",
     "@hippy/rejection-tracking-polyfill": "^1.0.0",
+    "@types/hippy__react": "^2.13.4",
+    "@types/node": "^20.14.11",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "babel-loader": "^8.1.0",
     "bezier-easing": "^2.1.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
