--- a/driver/js/examples/hippy-vue-next-demo/package.json
+++ b/driver/js/examples/hippy-vue-next-demo/package.json
@@ -16,8 +16,8 @@
     "web:build": "node ./scripts/env-polyfill.js webpack --config ./scripts/hippy-webpack.web-renderer.js"
   },
   "dependencies": {
-    "@hippy/vue-next": "latest",
-    "@hippy/vue-router-next-history": "latest",
+    "@hippy/vue-next": "v3.3-latest",
+    "@hippy/vue-router-next-history": "0.0.1",
     "@hippy/web-renderer": "latest",
     "@vue/runtime-core": "^3.2.46",
     "@vue/shared": "^3.2.46",
@@ -40,7 +40,7 @@
     "@hippy/hippy-dynamic-import-plugin": "^2.0.0",
     "@hippy/hippy-hmr-plugin": "^0.1.0",
     "@hippy/rejection-tracking-polyfill": "^1.0.0",
-    "@hippy/vue-css-loader": "^2.0.1",
+    "@hippy/vue-css-loader": "v3.3-latest",
     "@vitejs/plugin-vue": "^1.9.4",
     "@vue/cli-service": "^4.5.19",
     "@vue/compiler-sfc": "^3.2.46",
