--- a/driver/js/examples/hippy-react-demo/package.json
+++ b/driver/js/examples/hippy-react-demo/package.json
@@ -31,6 +31,7 @@
     "animated-scroll-to": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^9.1.2",
     "react-router": "~5.1.2",
     "react-router-dom": "~5.1.2",
     "regenerator-runtime": "^0.13.5",
