--- a/driver/js/packages/hippy-vue-next/package.json
+++ b/driver/js/packages/hippy-vue-next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/vue-next",
-  "version": "3.0.2-rc.0",
+  "version": "unspecified",
   "description": "Vue-Next binding for Hippy native framework",
   "author": "OpenHippy Team",
   "homepage": "https://hippyjs.org",
