--- a/packages/hippy-vue-next/package.json
+++ b/packages/hippy-vue-next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/vue-next",
-  "version": "unspecified",
+  "version": "2.17.6-alpha.0",
   "description": "Vue-Next binding for Hippy native framework",
   "author": "OpenHippy Team",
   "homepage": "https://hippyjs.org",
