--- a/driver/js/examples/hippy-vue-next-ssr-demo/package.json
+++ b/driver/js/examples/hippy-vue-next-ssr-demo/package.json
@@ -26,11 +26,11 @@
     "@hippy/vue-next": "latest",
     "@hippy/vue-next-server-renderer": "latest",
     "@hippy/hippy-vue-next-style-parser": "latest",
-    "@vue/runtime-core": "^3.4.32",
-    "@vue/server-renderer": "^3.4.32",
-    "@vue/shared": "^3.4.32",
+    "@vue/runtime-core": "3.4.32",
+    "@vue/server-renderer": "3.4.32",
+    "@vue/shared": "3.4.32",
     "core-js": "^3.20.2",
-    "vue": "^3.4.32",
+    "vue": "3.4.32",
     "vue-router": "^4.0.12",
     "express": "^4.18.2",
     "pinia": "2.0.30"
@@ -56,7 +56,7 @@
     "@hippy/vue-next-compiler-ssr": "latest",
     "@types/shelljs": "^0.8.5",
     "@vue/cli-service": "^4.5.19",
-    "@vue/compiler-sfc": "^3.4.32",
+    "@vue/compiler-sfc": "3.4.32",
     "babel-loader": "^8.1.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chokidar": "^3.5.3",
