--- a/driver/js/packages/hippy-vue-next-compiler-ssr/package.json
+++ b/driver/js/packages/hippy-vue-next-compiler-ssr/package.json
@@ -24,14 +24,14 @@
     "README.md"
   ],
   "peerDependencies": {
-    "@vue/compiler-core": "^3.4.32",
-    "@vue/compiler-dom": "^3.4.32",
-    "@vue/shared": "^3.4.32"
+    "@vue/compiler-core": "3.4.32",
+    "@vue/compiler-dom": "3.4.32",
+    "@vue/shared": "3.4.32"
   },
   "devDependencies": {
-    "@vue/compiler-core": "^3.4.32",
-    "@vue/compiler-dom": "^3.4.32",
-    "@vue/shared": "^3.4.32"
+    "@vue/compiler-core": "3.4.32",
+    "@vue/compiler-dom": "3.4.32",
+    "@vue/shared": "3.4.32"
   },
   "jest": {
     "moduleNameMapper": {
