--- a/driver/js/package.json
+++ b/driver/js/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-vue": "^9.5.1",
     "esm": "^3.2.25",
     "flow-remove-types": "^1.2.3",
+    "fs-extra": "^11.1.1",
     "got": "^12.1.0",
     "jest": "^27.3.1",
     "lerna": "^6.0.3",
@@ -67,6 +68,7 @@
     "rollup": "^2.79.1",
     "rollup-plugin-api-extractor": "^0.2.5",
     "rollup-plugin-dts": "^4.2.3",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-flow-no-whitespace": "^1.0.0",
     "rollup-plugin-typescript2": "^0.34.0",
     "shelljs": "^0.8.5",
