--- a/framework/ohos/src/main/cpp/impl/renderer/native/CMakeLists.txt
+++ b/framework/ohos/src/main/cpp/impl/renderer/native/CMakeLists.txt
@@ -130,6 +130,7 @@ set(PUBLIC_SOURCE_SET
   src/native_render_provider_capi.cc
   src/native_render_provider_napi.cc
   src/api/hippy_view_provider.cc
+  src/api_c/hippy.cc
   )
 target_sources(${PROJECT_NAME} PRIVATE ${SOURCE_SET} PUBLIC ${PUBLIC_SOURCE_SET})
 # endregion
