--- a/framework/ohos/oh-package.json5
+++ b/framework/ohos/oh-package.json5
@@ -3,10 +3,10 @@
   "author": "Tencent",
   "name": "hippy",
   "description": "Hippy is a cross-platform development framework.",
-  "repository": "https://github.com/sohotz/Hippy.git",
+  "repository": "https://github.com/Tencent/Hippy.git",
   "homepage": "https://openhippy.com/",
   "keywords": ["hippy", "cross-platform"],
-  "version": "1.3.0",
+  "version": "3.3.0",
   "dependencies": {},
   "devDependencies": {},
 }
