--- a/framework/examples/ios-demo/podfile
+++ b/framework/examples/ios-demo/podfile
@@ -1,7 +1,7 @@
 
 install! 'cocoapods', :deterministic_uuids => false
 use_frameworks! :linkage => :static
-ENV['js_engine'] = 'jsc' # js engine configuration for hippy, options are: 'jsc'/'hermes'.
+ENV['js_engine'] = 'hermes' # js engine configuration for hippy, options are: 'jsc'/'hermes'.
 
 
 workspace 'HippyDemo.xcworkspace'
