--- a/framework/examples/ios-demo/podfile
+++ b/framework/examples/ios-demo/podfile
@@ -25,6 +25,7 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
       config.build_settings['GCC_TREAT_WARNINGS_AS_ERRORS'] = "YES"
     end
   end
