--- a/framework/android/connector/driver/js/gradle.properties
+++ b/framework/android/connector/driver/js/gradle.properties
@@ -18,8 +18,9 @@
 
 #
 # Indicates the javascript engine to use:
-#   * V8
-#   * HERMES
+#   * V8          - Use V8 engine only
+#   * HERMES_ONLY - Use Hermes engine only  
+#   * HERMES_V8   - Support both Hermes and V8 engines (parallel build)
 #
 CPP_JS_ENGINE=V8
 
