feat(android): hermes support

--- a/framework/android/connector/driver/js/gradle.properties
+++ b/framework/android/connector/driver/js/gradle.properties
@@ -43,12 +43,12 @@ CPP_V8_COMPONENT=10.6.194.26
 # Hermes Component
 #
 # The following prebuilt Hermes versions are available:
-#   * hermes-2023-09-26-RNv0.73.0-ee2922a50fb719bdb378025d95dbd32ad93cd679   (current use)
+#   * hermes-0.12.30302-rn0.76-stable-20251016   (RN 0.76-stable)
 #
 # You can also specify the absolute path to the Hermes component to use,
 # e.g. /opt/Hermes-component
 #
-CPP_HERMES_COMPONENT=hermes-2023-09-26-RNv0.73.0-ee2922a50fb719bdb378025d95dbd32ad93cd679
+CPP_HERMES_COMPONENT=hermes-0.76-test
 
 
 #
