--- a/framework/android/connector/driver/js/gradle.properties
+++ b/framework/android/connector/driver/js/gradle.properties
@@ -19,10 +19,10 @@
 #
 # Indicates the javascript engine to use:
 #   * V8          - Use V8 engine only
-#   * HERMES_ONLY - Use Hermes engine only  
+#   * HERMES_ONLY - Use Hermes engine only
 #   * HERMES_V8   - Support both Hermes and V8 engines (parallel build)
 #
-CPP_JS_ENGINE=V8
+CPP_JS_ENGINE=HERMES_ONLY
 
 #
 # V8 Component
