--- a/framework/android/connector/driver/js/gradle.properties
+++ b/framework/android/connector/driver/js/gradle.properties
@@ -20,9 +20,13 @@
 # Indicates the javascript engine to use:
 #   * V8          - Use V8 engine only
 #   * HERMES_ONLY - Use Hermes engine only
-#   * HERMES_V8   - Support both Hermes and V8 engines (parallel build)
 #
-CPP_JS_ENGINE=HERMES_ONLY
+#   Note:
+#   The HERMES_V8 mode is currently not supported,
+#   because the relevant `#ifdef JS_V8` macros have not been fully handled.
+#   Support for building with both Hermes and V8 engines in parallel will be provided in the future.
+#
+CPP_JS_ENGINE=HERMES_V8
 
 #
 # V8 Component
